--- a/Project/Ashar Titan.html
+++ b/Project/Ashar Titan.html
@@ -98,7 +98,7 @@
                      <h1>Project Configurations</h1>
                   </div>
                   <div class="divider mb-4"> <img src="divide.png"></div>
-                  <table class="table  tbl con-tab he" style="" border="0">
+                  <table class="table  tbl con-tab he">
                      <thead>
                         <tr>
                            <th class="he1 view">
